# wavr

./: Cargo.toml  README.md
resources/: chirp.pcm  stereo.pcm  stereo_ramp.pcm  vocal.flac
src/: core.rs  lib.rs  main.rs  pcm.rs  signals.rs  util.rs  waveform.rs
src/core/: mod.rs  waveform.rs
