[package]
name = "wavr"
version = "0.2.0"
authors = ["Richard Mitic <richard.h.mitic@gmail.com>"]
publish = false

[[bin]]
name = "wavr"
path = "src/main.rs"

[dependencies]
termion = "1.5.4"
hound = "3.3.1"
clap = "2.31.2"
itertools = "0.8.2"
rand = "0.3"
byteorder = "1.2.6"
rustfft = "3.0.0"
apodize = "1.0.0"
sample = "0.10.0"
time_calc = "0.13.0"

[dev-dependencies]
all_asserts = "1.0.0"
